Fix conflict error and retrofit the api spec
